unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Search__c/DSCORGPKG__DiscoverOrg_Search__c.object-meta.xml
<CustomObject>
    <label>DiscoverOrg_Search</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DiscoverOrg_Searches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>