unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Search__c/fields/DSCORGPKG__favSearchName__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__favSearchName__c</fullName>
    <label>favSearchName</label>
    <length>250</length>
    <type>Text</type>
</CustomField>