unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Search__c/fields/DSCORGPKG__isConverted__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__isConverted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isConverted</label>
    <type>Checkbox</type>
</CustomField>