unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Search__c/fields/DSCORGPKG__Parameters__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Parameters__c</fullName>
    <label>Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>