unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Search__c/fields/DSCORGPKG__recSearchName__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__recSearchName__c</fullName>
    <label>recSearchName</label>
    <length>250</length>
    <type>Text</type>
</CustomField>