unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Search__c/fields/DSCORGPKG__Search_JSON__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Search_JSON__c</fullName>
    <label>Search JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>