unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Search__c/fields/DSCORGPKG__SearchType__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__SearchType__c</fullName>
    <label>SearchType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recent</fullName>
            </value>
            <value>
                <fullName>Favorite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>