unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Search__c/fields/DSCORGPKG__ShowOnHover__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__ShowOnHover__c</fullName>
    <label>ShowOnHover</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>