unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Search__c/fields/DSCORGPKG__userid__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__userid__c</fullName>
    <label>userid</label>
    <length>30</length>
    <type>Text</type>
</CustomField>